--- a/ReadMe
+++ b/ReadMe
@@ -4,3 +4,28 @@ git commit -m "First commit"
 git remote add origin https://github.com/mygitaccount321/testproject.git
 git push -u origin master 
 
+https://github.com/in28minutes/jenkin-devops-microservice/blob/master/Jenkinsfile
+
+docker:dind and myjenkins-blueocean:2.375.2-1 should be running
+https://www.jenkins.io/doc/book/installing/docker/#on-windows
+
+docker run -p 8000:8000 -it mydockerhubaccount321/jenkin-devops-pipeline:jenkins-jenkin-devops-pipeline-32
+
+docker run --name jenkins-blueocean --restart=on-failure --detach ^
+  --network jenkins --env DOCKER_HOST=tcp://docker:2376 ^
+  --env DOCKER_CERT_PATH=/certs/client --env DOCKER_TLS_VERIFY=1 ^
+  --volume jenkins-data:/var/jenkins_home ^
+  --volume jenkins-docker-certs:/certs/client:ro ^
+  --volume /var/run/docker.sock:/var/run/docker.sock ^
+  --publish 8081:8080 --publish 50000:50000 myjenkins-blueocean:2.375.2-1
+
+
+
+
+docker run --name jenkins-docker --rm --detach ^
+  --privileged --network jenkins --network-alias docker ^
+  --env DOCKER_TLS_CERTDIR=/certs ^
+  --volume jenkins-docker-certs:/certs/client ^
+  --volume jenkins-data:/var/jenkins_home ^
+  --publish 2376:2376 ^
+  docker:dind
